------------------------------------------------------------
System Installer v2.3.10 (not yet released)
------------------------------------------------------------
    - [Ticket #515] Invalid package names (such as comments)
      are not included anymore in the list of packages to
      installed, when parsing the package list files.
    - Update dependencies to Perl modules from OSCAR base
      > 6.0.1.
    - Add the automatic detection of initrd images when setting
      image's kernel(s), otherwise, no Debian systems will boot.
    - Code cleaning up.
------------------------------------------------------------
System Installer v2.3.9 
------------------------------------------------------------
    - Modify SystemInstaller to use ORM (and ultimately
      PackMan) for image creation: avoid duplication of 
      similar capabilities and simplify the code.
    - Fix a typo when using the mksiimage script with the
      two "force" and "verbose" options (problem reported by
      Erik Jacobson).
    - Fix a problem with the generation of the SystemConfigurator
      configuration file when the label of the default kernel
      is too long.
    - Better error handling and debugging messages.
------------------------------------------------------------
System Installer v2.3.8
------------------------------------------------------------
    - Fix the changelog: systeminstaller-oscar changelogs
      should _not_ be included into packages (RPM or
      Deb) changelogs. Package chaneglogs are only
      reserved for modifications to the packages, not
      the "upstream" version of systeminstaller.
	- Improved mksiadapter tool as well as generation/updating
	  of /etc/hosts. It now includes names corresponding to
	  all available interfaces [EF].
------------------------------------------------------------
System Installer v2.3.7
------------------------------------------------------------
        - Add check whether all packages were really installed 