@@ -24,6 +24,7 @@ use Tk;
 use Tk::FileSelect;
 use SystemInstaller::Tk::Common;
 use SystemInstaller::Tk::Help;
+use SystemInstaller::Utils;
 use SIS::Image;
 use SIS::DB;
 use strict;
@@ -32,7 +33,7 @@ use strict;
 
 
 sub addclients_window {
-    my $config = init_si_config();
+    my $config = SystemInstaller::Utils::init_si_config();
 
     my $window = shift;
     my %vars = (
