@@ -40,6 +40,7 @@ use SystemInstaller::Log qw (verbose get_verbose);
 use SystemInstaller::Tk::Common;
 use SystemInstaller::Tk::Help;
 use SystemInstaller::Passwd qw(update_user);
+use SystemInstaller::Utils;
 use Carp;
 use SystemImager::Server;
 use SystemImager::Common;
@@ -59,7 +60,7 @@ use strict;
             );
 
 sub createimage_basic_window ($%) {
-    my $config = init_si_config();
+    my $config = SystemInstaller::Utils::init_si_config();
 
     my ($window, %vars) = @_;
     $vars{'title'} = "Create an SIS Image";
@@ -304,7 +305,7 @@ sub createimage_basic_window ($%) {
 # !!!! WARNING: This function is not anymore adapted to OSCAR, the OSCAR GUI
 # should not use it anymore. Prefer createimage_basic_window instead. !!!!
 sub createimage_window ($%) {
-    my $config = init_si_config();
+    my $config = SystemInstaller::Utils::init_si_config();
 
     my ($window, %vars) = @_;
     $vars{'title'} = "Create an SIS Image";
@@ -692,7 +693,7 @@ sub add_image ($$) {
     my ($vars, $window) = @_;
 
     print "[add_image] Starting... \n";
-    my $config = init_si_config();
+    my $config = SystemInstaller::Utils::init_si_config();
     my $rsyncd_conf = $config->rsyncd_conf();
     my $rsync_stub_dir = $config->rsync_stub_dir();
     my $verbose = &get_verbose();
