@@ -1,6 +1,8 @@
 ------------------------------------------------------------
 System Installer v2.3.10 (not yet released)
 ------------------------------------------------------------
+    - [Ticket #462] The init_si_config function is now in a GUI
+      independent Perl module (SystemInstaller::Utils).
     - [Ticket #515] Invalid package names (such as comments)
       are not included anymore in the list of packages to
       installed, when parsing the package list files.
